# anime-file-manager

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  test_path_fix.py  test_season_folder.py  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  TestPage.tsx  globals.css  main.tsx  test-button.html  test-dialog.html  test-tauri.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  file_operations.rs  logs.rs  metadata.rs  mod.rs
src/components/: Layout.tsx  Sidebar.tsx
src/components/ui/: button.tsx  progress.tsx
src/pages/: ImportPage.tsx  LogsPage.tsx  SettingsPage.tsx
src/types/: tauri.d.ts
src/utils/: cn.ts  formatters.ts
